namespace Assets.Data
{
    public static class AnimationStrings
    {
        public static string IsMoving => nameof(IsMoving);
        public static string YVelocity => nameof(YVelocity);
        public static string IsJumping => nameof(IsJumping);
        public static string IsGrounded => nameof(IsGrounded);
        public static string IsOnCeiling => nameof(IsOnCeiling);
        public static string IsOnWall => nameof(IsOnWall);
        public static string IsOpen => nameof(IsOpen);
        public static string IsSpawned => nameof(IsSpawned);
        public static string Death => nameof(Death);
        public static string CanMove => nameof(CanMove);
        public static string ClosePortal => nameof(ClosePortal);
        public static string OpenPortal => nameof(OpenPortal);
        public static string IsSprinting => nameof(IsSprinting);
        public static string PlayerLanded => nameof(PlayerLanded);
        public static string HasPlayerInZone => nameof(HasPlayerInZone);
        public static string HasTarget => nameof(HasTarget);
        public static string LeverOn => nameof(LeverOn);
        public static string Collected => nameof(Collected);
        public static string IsAlive => nameof(IsAlive);
        public static string IsClosed => nameof(IsClosed);
    }
}